k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: k8s-namespace
spec:
  type: ClusterIP   
  selector:
    app: node-api
  ports:
    - port: 80
      targetPort: 8080
